Gap Fix
Fixed Gap in seperating design

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,6 @@ section {
   width: 100%;
   padding: 0 5%;
   color: white;
-  margin: 5px;
 }
 a {
   font-family: 'Roboto Condensed', sans-serif;
